--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.2.0",
+    "reactjs-popup": "^2.0.5",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
