--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.2.0",
