--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "reactjs-popup": "^2.0.5",
     "uniqid": "^5.4.0",
